fixed CSS gap bug for mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -206,7 +206,7 @@
   height: 100%;
   width: 100%;
   transition: opacity ease-out 0.3s;
-  gap: 30px;
+  /* gap: 30px; */
 }
 
 .single-movie.active .movie-active-container {
@@ -224,11 +224,13 @@
 
 .movie-active-left {
   grid-area: 2 / 1 / 3 / 2;
+  margin-top: 30px;
 }
 
 .movie-active-right {
   grid-area: 2 / 2 / 3 / 3;
-  padding-right: 30px;
+  margin-left: 30px;
+  /* padding-right: 30px; */
 }
 
 @media only screen and (max-width: 768px) {
@@ -243,11 +245,13 @@
   .movie-active-container {
     display: flex;
     flex-flow: column;
-    gap: 20px;
+    /* gap: 20px; */
+    color: red;
   }
 
   .movie-active-right {
     padding: 0;
+    margin: 0;
   }
 }
 
@@ -304,14 +308,16 @@
   display: flex;
   flex-flow: row wrap;
   align-items: center;
+  margin-top: 30px;
   width: 100%;
-  gap: 10px;
+  /* gap: 10px; */
   font-family: var(--text);
   letter-spacing: 2px;
 }
 
 .movie-active-subtitle span {
   font-size: max(1.25rem, 1.5vw);
+  margin-right: 10px;
   color: white;
 }
 
@@ -338,6 +344,6 @@
 
 @media only screen and (max-width: 425px) {
   .movie-active-overview {
-    margin: 15px 0 30px 0;
+    margin: 15px 0 40px 0;
   }
 }
